--- a/client/index.html
+++ b/client/index.html
@@ -4,44 +4,86 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <title>Document</title>
 </head>
 
 <body>
-    <div id="login-container">
-        <h1>Log In</h1>
-        <form id="login">
-            <label for="email">Email</label>
-            <input id="login-email" type="text" name="email">
-            <br>
-            <br>
-            <label for="password">Password</label>
-            <input id="login-password" type="password" name="password">
-            <br>
-            <br>
-            <button id="submit-login" type="button">Log In</button>
-            <button id="go-to-register" type="button">Register</button>
-        </form>
-    </div>
-    <div id="register-container">
-        <h1>Register</h1>
-        <form id="register">
-            <label for="email">Email</label>
-            <input id="register-email" type="text" name="email">
-            <br>
-            <br>
-            <label for="password">Password</label>
-            <input id="register-password" type="password" name="password">
-            <br>
-            <br>
-            <button id="submit-register" type="button">Register</button>
-            <button id="go-to-login" type="button">Log In</button>
-        </form>
-    </div>
-    <div id="todo-container">
-        <h1>ToDoLists</h1>
-    </div>
+
+    <!-- LOGIN PAGE -->
+    <section id='login-page' class='container'>
+        <div>
+            <h1 class="animate__animated animate__headShake">Log In</h1>
+            <form onsubmit="login(event)">
+                <label for="email">Email</label>
+                <input id="login-email" type="text" name="email">
+                <br>
+                <br>
+                <label for="password">Password</label>
+                <input id="login-password" type="password" name="password">
+                <br>
+                <br>
+                <button class='btn btn-primary' id="submit-login" type="submit">Log In</button>
+                <button onclick="goToRegister()" id="go-to-register" type="button">Register</button>
+            </form>
+        </div>
+    </section>
+
+    <!-- REGISTER PAGE -->
+    <section id='register-page' class='container'>
+        <div>
+            <h1>Register</h1>
+            <form onsubmit='register(event)' id="register">
+                <label for="email">Email</label>
+                <input id="register-email" type="text" name="email">
+                <br>
+                <br>
+                <label for="password">Password</label>
+                <input id="register-password" type="password" name="password">
+                <br>
+                <br>
+                <button id="submit-register" type="submit">Register</button>
+                <button onclick="checkLogin()" id="go-to-login" type="button">Log In</button>
+            </form>
+        </div>
+    </section>
+
+    <!-- HOME PAGE -->
+    <section id='home-page' class='container'>
+        <button onclick="logout()" class='btn btn-danger'>Log Out</button>
+        <div>
+            <h1>Your Lists</h1>
+            <button onclick="showAddToDoForm()" id='addtodo-show-form'>Add To Do</button>
+            <ul id='todo-container'>
+
+            </ul>
+        </div>
+    </section>
+
+    <!-- ADD TO DO PAGE-->
+    <section id='addtodo-page'>
+        <form onsubmit="addToDo(event)">
+            <div class="form-group">
+              <label for="title">Title</label>
+              <input type="text" class="form-control" id="add-title" placeholder="Insert Title">
+            </div>
+            <div class="form-group">
+              <label for="dueDate">Due Date</label>
+              <input type="date" class="form-control" id="add-dueDate" placeholder="Select Date">
+            </div>
+            <div class="form-group">
+              <label for="description">Description</label>
+              <input type="text" class="form-control" id="add-description" placeholder="Insert Description">
+            </div>
+            <div class="form-group">
+              <label for="status">Status</label>
+              <input type="text" class="form-control" id="add-status" placeholder="Insert Status">
+            </div>
+            <button id='submit-addtodo' type="submit">Submit</button>
+          </form>
+    </section>
+
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"
         integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
         <script src="./main.js"></script>
