--- a/client/index.html
+++ b/client/index.html
@@ -2,91 +2,156 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-    <title>Document</title>
+  <meta name="google-signin-client_id"
+    content="64684442308-kqngr6jc3ffkuvavubtq0rt5rb3bb6m5.apps.googleusercontent.com">
+  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="bulma-rtl.min.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+  <title>Document</title>
 </head>
 
 <body>
+  <section>
+    
+  </section>
+  <!-- LOGIN PAGE -->
+  <section id='login-page' class='card logreg-page'>
+    <div class='card-content'>
+      <h1 class='is-size-3 has-text-weight-semibold'>Log In</h1>
+      <form onsubmit="login(event)">
+        <label for="email">Email</label>
+        <input class="input is-primary" id="login-email" type="text" name="email">
+        <br>
+        <br>
+        <label for="password">Password</label>
+        <input class="input is-primary" id="login-password" type="password" name="password">
+        <br>
+        <br>
+        <button class="button is-info" id="submit-login" type="submit">Log In</button>
+        <button class="button is-success" onclick="goToRegister()" id="go-to-register" type="button">Register</button>
+      </form>
+      <b>Or, use another account!</b>
+      <br>
+      <div class="g-signin2" data-onsuccess="onSignIn"></div>
+    </div>
+  </section>
 
-    <!-- LOGIN PAGE -->
-    <section id='login-page' class='container'>
-        <div>
-            <h1 class="animate__animated animate__headShake">Log In</h1>
-            <form onsubmit="login(event)">
-                <label for="email">Email</label>
-                <input id="login-email" type="text" name="email">
-                <br>
-                <br>
-                <label for="password">Password</label>
-                <input id="login-password" type="password" name="password">
-                <br>
-                <br>
-                <button class='btn btn-primary' id="submit-login" type="submit">Log In</button>
-                <button onclick="goToRegister()" id="go-to-register" type="button">Register</button>
-            </form>
+  <!-- REGISTER PAGE -->
+  <section id='register-page' class='card logreg-page'>
+    <div class='card-content'>
+      <h1 class='is-size-3 has-text-weight-semibold'>Register</h1>
+      <form onsubmit='register(event)' id="register">
+        <label for="email">Email</label>
+        <input class="input is-primary" id="register-email" type="text" name="email">
+        <br>
+        <br>
+        <label for="password">Password</label>
+        <input class="input is-primary" id="register-password" type="password" name="password">
+        <br>
+        <br>
+        <button class="button is-info" id="submit-register" type="submit">Register</button>
+        <button class="button is-success" onclick="checkLogin()" id="go-to-login" type="button">Log In</button>
+      </form>
+    </div>
+  </section>
+
+  <!-- HOME PAGE -->
+  <section id='home-page'>
+    <div id='navbar'>
+      <button class="button is-link is-focused" onclick="showAddToDoForm()" id='addtodo-show-form'>Add To Do</button>
+      <h1 class='is-size-3 has-text-weight-semibold'>Your Lists</h1>
+      
+      <button class="button is-danger is-focused" onclick="logout()" class='btn btn-danger'>Log Out</button>
+    </div>
+    <div>
+      <div class="columns">
+        <div class="column">
+          First column
+          <ul class="fixed-content hidden-scrollbar todo-container belum">
+
+          </ul>
         </div>
-    </section>
+        <div class="column">
+          Second column
+          <ul class="fixed-content hidden-scrollbar todo-container lagi">
 
-    <!-- REGISTER PAGE -->
-    <section id='register-page' class='container'>
-        <div>
-            <h1>Register</h1>
-            <form onsubmit='register(event)' id="register">
-                <label for="email">Email</label>
-                <input id="register-email" type="text" name="email">
-                <br>
-                <br>
-                <label for="password">Password</label>
-                <input id="register-password" type="password" name="password">
-                <br>
-                <br>
-                <button id="submit-register" type="submit">Register</button>
-                <button onclick="checkLogin()" id="go-to-login" type="button">Log In</button>
-            </form>
+          </ul>
         </div>
-    </section>
+        <div class="column">
+          Third column
+          <ul class="fixed-content hidden-scrollbar todo-container udah">
 
-    <!-- HOME PAGE -->
-    <section id='home-page' class='container'>
-        <button onclick="logout()" class='btn btn-danger'>Log Out</button>
-        <div>
-            <h1>Your Lists</h1>
-            <button onclick="showAddToDoForm()" id='addtodo-show-form'>Add To Do</button>
-            <ul id='todo-container'>
-
-            </ul>
+          </ul>
         </div>
-    </section>
+        <div id='weather'></div>
+      </div>
 
-    <!-- ADD TO DO PAGE-->
-    <section id='addtodo-page'>
-        <form onsubmit="addToDo(event)">
-            <div class="form-group">
-              <label for="title">Title</label>
-              <input type="text" class="form-control" id="add-title" placeholder="Insert Title">
-            </div>
-            <div class="form-group">
-              <label for="dueDate">Due Date</label>
-              <input type="date" class="form-control" id="add-dueDate" placeholder="Select Date">
-            </div>
-            <div class="form-group">
-              <label for="description">Description</label>
-              <input type="text" class="form-control" id="add-description" placeholder="Insert Description">
-            </div>
-            <div class="form-group">
-              <label for="status">Status</label>
-              <input type="text" class="form-control" id="add-status" placeholder="Insert Status">
-            </div>
-            <button id='submit-addtodo' type="submit">Submit</button>
-          </form>
-    </section>
+    </div>
+  </section>
 
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js"
-        integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-        <script src="./main.js"></script>
+  <!-- ADD TO DO PAGE-->
+  <section id='addtodo-page' class='control card'>
+    <div class='card-content'>
+      <h1 class='is-size-3 has-text-weight-semibold'>Add To Do</h1>
+      <form onsubmit="addToDo(event)">
+        <label for="title">Title</label>
+        <input type="text" class="control input is-primary" id="add-title" placeholder="Insert Title">
+        <br><br>
+        <label for="dueDate">Due Date</label>
+        <input type="date" class="control input is-primary" id="add-dueDate" placeholder="Select Date">
+        <br><br>
+        <label for="description">Description</label>
+        <input type="text" class="control input is-primary" id="add-description" placeholder="Insert Description">
+        <br><br>
+        <label for="status">Status</label>
+        <div class="field">
+          <div class="control">
+            <div class="select is-primary">
+              <select id='add-status'>
+                <option value="To Do">To Do</option>
+                <option value="On Progress">On Progress</option>
+                <option value="Done">Done</option>
+              </select>
+            </div>
+          </div>
+        </div>
+        <br>
+        <button class='button is-info' id='submit-addtodo' type="submit">Submit</button>
+      </form>
+      <button onclick="checkLogin()" type="button">Home Page</button>
+    </div>
+  </section>
+
+  <!-- EDIT ALL TO DO PAGE-->
+  <section id='editalltodo-page'>
+    <div class='card-content'>
+      <h1 class='is-size-3 has-text-weight-semibold'>Edit To Do</h1>
+      <form onsubmit="editAllToDo(event)">
+        <input id='id-editalltodo-page' style='display:none' type="text">
+        <label for="title">Title</label>
+        <input type="text" class="control input is-primary" id="edit-title" placeholder="Insert Title">
+        <br><br>
+        <label for="dueDate">Due Date</label>
+        <input type="date" class="control input is-primary" id="edit-dueDate" placeholder="Select Date">
+        <br><br>
+        <label for="description">Description</label>
+        <input type="text" class="control input is-primary" id="edit-description" placeholder="Insert Description">
+        <br><br>
+        <button class='button is-info' id='submit-edittodo' type="submit">Submit</button>
+      </form>
+      <button onclick="checkLogin()" type="button">Home Page</button>
+    </div>
+
+
+  
+
+  <script src="https://apis.google.com/js/platform.js" async defer></script>
+  <script src="https://code.jquery.com/jquery-3.5.1.min.js"
+    integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+  <script src="./main.js"></script>
+
 </body>
 
 </html>
