--- a/client/index.html
+++ b/client/index.html
@@ -13,9 +13,7 @@
 </head>
 
 <body>
-  <section>
-    
-  </section>
+
   <!-- LOGIN PAGE -->
   <section id='login-page' class='card logreg-page'>
     <div class='card-content'>
@@ -68,19 +66,19 @@
     <div>
       <div class="columns">
         <div class="column">
-          First column
+          <h1 class='is-size-3 has-text-weight-semibold'>Undone</h1>
           <ul class="fixed-content hidden-scrollbar todo-container belum">
 
           </ul>
         </div>
         <div class="column">
-          Second column
+          <h1 class='is-size-3 has-text-weight-semibold'>On Progress</h1>
           <ul class="fixed-content hidden-scrollbar todo-container lagi">
 
           </ul>
         </div>
         <div class="column">
-          Third column
+          <h1 class='is-size-3 has-text-weight-semibold'>Done</h1>
           <ul class="fixed-content hidden-scrollbar todo-container udah">
 
           </ul>
@@ -120,7 +118,7 @@
         <br>
         <button class='button is-info' id='submit-addtodo' type="submit">Submit</button>
       </form>
-      <button onclick="checkLogin()" type="button">Home Page</button>
+      <button class='button is-primary' onclick="checkLogin()" type="button">Home Page</button>
     </div>
   </section>
 
@@ -139,11 +137,23 @@
         <label for="description">Description</label>
         <input type="text" class="control input is-primary" id="edit-description" placeholder="Insert Description">
         <br><br>
+        <label for="status">Status</label>
+        <div class="field">
+          <div class="control">
+            <div class="select is-primary">
+              <select id='add-status'>
+                <option value="To Do">To Do</option>
+                <option value="On Progress">On Progress</option>
+                <option value="Done">Done</option>
+              </select>
+            </div>
+          </div>
+        </div>
         <button class='button is-info' id='submit-edittodo' type="submit">Submit</button>
       </form>
-      <button onclick="checkLogin()" type="button">Home Page</button>
+      <button class='button is-primary' onclick="checkLogin()" type="button">Home Page</button>
     </div>
-
+    </section>
 
   
 
